<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hero1</name>
  <version>0.0.0</version>
  <description>The hero1 metapackage</description>

  <maintainer email="amigo@todo.todo">amigo</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  # hero-start
  <exec_depend>hmi</exec_depend>
  <exec_depend>text_to_speech</exec_depend>
  <exec_depend>hero_bringup</exec_depend>
  <exec_depend>hero_description</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rosbridge_server</exec_depend>
  <exec_depend>tue_mobile_ui</exec_depend>
  <exec_depend>node_alive</exec_depend>
  <exec_depend>head_ref</exec_depend>

  <exec_depend>laser_filters</exec_depend>
  <exec_depend>dragonfly_speech_recognition</exec_depend>
  <exec_depend>rgbd</exec_depend>
  <exec_depend>test_tools</exec_depend>

  <exec_depend>hsrb_full</exec_depend>

  <exec_depend>tue_teleop_keyboard</exec_depend>

  <export>
     <metapackage />
  </export>
</package>
