<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hero1</name>
  <version>0.0.0</version>
  <description>The hero1 metapackage</description>

  <maintainer email="amigo@todo.todo">amigo</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>hero_start</exec_depend>

  <exec_depend>laser_filters</exec_depend>
  <exec_depend>dragonfly_speech_recognition</exec_depend>
  <exec_depend>rgbd</exec_depend>
  <exec_depend>test_tools</exec_depend>

  <exec_depend>hsrb_full</exec_depend>

  <exec_depend>tue_teleop_keyboard</exec_depend>

  <export>
     <metapackage/>
  </export>
</package>
