<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hero2</name>
  <version>0.0.0</version>
  <description>The hero2 metapackage</description>

  <maintainer email="amigo@todo.todo">amigo</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  # hero
    # hero-demo
      # hero-demo-user
        # robot-demo-user
          <exec_depend>tue_teleop_keyboard</exec_depend>
        <exec_depend>hero_bringup</exec_depend>
        <exec_depend>hero_description</exec_depend>

  <exec_depend>rgbd</exec_depend>
  <exec_depend>upower_ros</exec_depend>

  <exec_depend>tue_robocup</exec_depend>
  <exec_depend>hero_skills</exec_depend>
  <exec_depend>telegram_ros</exec_depend>
  <exec_depend>image_recognition_openpose</exec_depend>

  <export>
     <metapackage />
  </export>
</package>
