<?xml version="1.0"?>
<package format="2">
  <name>hero_dev</name>
  <version>0.0.0</version>
  <description>The hero_dev metapackage, contains everything a hero development pc needs</description>

  <maintainer email="amigo@todo.todo">amigo</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>hero1</exec_depend>
  <exec_depend>hero2</exec_depend>

  # simulator
  <exec_depend>tmc_desktop_full</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>

  <exec_depend>rviz</exec_depend>
  <exec_depend>viz</exec_depend>
  <exec_depend>ed_rviz_plugins</exec_depend>

  <exec_depend>hero_dashboard</exec_depend>
  <exec_depend>hero_display</exec_depend> # How does this get on hero1?

  <exec_depend>nl_robot_console</exec_depend> #should we also add this to the robots? for convenience?

</package>
