<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hero_dev</name>
  <version>0.0.0</version>
  <description>The hero_dev metapackage, contains everything a hero development pc needs</description>

  <maintainer email="amigo@todo.todo">amigo</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- simulator -->.
  <exec_depend>tmc_desktop_full</exec_depend>

  <exec_depend>hero_start</exec_depend>

  <exec_depend>tue_middleware</exec_depend>
  <exec_depend>tue_mobile_ui</exec_depend>

  <exec_depend>rviz</exec_depend>
  <exec_depend>viz</exec_depend>
  <exec_depend>ed_rviz_plugins</exec_depend>

  <exec_depend>nl_robot_console</exec_depend>

  <export>
     <metapackage/>
  </export>
</package>
