<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tue_middleware</name>
  <version>0.0.0</version>
  <description>The tue_middleware metapackage</description>

  <maintainer email="amigo@todo.todo">amigo</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>diagnostic_aggregator</exec_depend>
  <exec_depend>node_alive</exec_depend>
  <exec_depend>cb_base_navigation</exec_depend>
  <exec_depend>depthimage_to_navscan_rgbd</exec_depend>
  <exec_depend>dwa_local_planner</exec_depend>
  <exec_depend>gmapping</exec_depend>
  <exec_depend>ed</exec_depend>
  <exec_depend>ed_object_models</exec_depend>
  <exec_depend>ed_perception</exec_depend>
  <exec_depend>ed_perception_models</exec_depend>
  <exec_depend>ed_gui_server</exec_depend>
  <exec_depend>ed_localization</exec_depend>
  <exec_depend>ed_navigation</exec_depend>
  <exec_depend>ed_robocup</exec_depend>
  <exec_depend>ed_sensor_integration</exec_depend>
  <exec_depend>ed_people_recognition</exec_depend>
  <exec_depend>image_recognition</exec_depend>
  <exec_depend>action_server</exec_depend>
  <exec_depend>people_recognition</exec_depend>
  <exec_depend>conversation_engine</exec_depend>

  <export>
     <metapackage/>
  </export>
</package>
